<rss version="2.0">
    <channel>
        <title><![CDATA[外務省海外安全ホームページ新着海外安全情報]]></title>
        <link>https://www.anzen.mofa.go.jp/index.html</link>
        <description><![CDATA[このホームページに掲載する海外安全情報は、海外に渡航・滞在される方々が自分自身で安全を確保していただくための参考情報です。法的な強制力をもって、皆様の渡航を帰ししたり、退避を命令したりするものではありません。同様に旅行会社の主催する旅行を中止させる効力もありません。渡航前、滞在中は、常に「自分の身は自分で守る」との心構えをもって、安全対策に努めてください。]]></description>
        <lastBuildDate>Tue, 13 Sep 2022 14:56:14 +0900</lastBuildDate>
        <item>
            <title><![CDATA[ネパールの危険情報【危険レベル継続】（内容の更新）]]></title>
            <link><![CDATA[https://www.anzen.mofa.go.jp/info/pchazardspecificinfo_2022T075.html]]></link>
            <description><![CDATA[【危険度】
●極西部（カイラリ郡、バジャン郡、バジュラ郡、アチャム郡）、中西部（バケ郡、スルケット郡、ジュムラ郡、ダン郡、バルディア郡、ロルパ郡、ルクム（東部）郡、ルクム（西部）郡、サリヤン郡、ジャジャルコット郡、カリコット郡、ダイレク郡、ピュータン郡）、中部（パルサ郡、バラ郡、ラウタハト郡、サルラヒ郡、マハッタリ郡、ダヌシャ郡の各東西ハイウェイから南方地域）、東部（シラハ郡とサプタリ郡の各東西マヘンドラハイウェイから南方地域）
：レベル２：不要不急の渡航は止めてください。（継続）

●上記以外の地域（フムラ郡、ムグ郡、ムスタン郡、マナン郡、ラスワ郡、ソルクンブ郡のクンブ地区を除く）
：レベル１：十分注意してください。（継続）

【ポイント】
●政治的主張に基づく過激派集団（マオイスト・チャンド派）や、タライ地区の独立を目指す反政府グループが多い地域では、注意が必要です。
●バンダと称するゼネラルストライキが散発的に実施されており、各種交通機関の麻痺及びバンダに乗じた暴力行為に注意が必要です。]]></description>
            <category><![CDATA[危険情報]]></category>
            <pubDate>Tue, 13 Sep 2022 14:56:14 +0900</pubDate>
        </item>
        <item>
            <title><![CDATA[サル痘の発生状況（複数国での発生）（その１２）]]></title>
            <link><![CDATA[https://www.anzen.mofa.go.jp/info/pcwideareaspecificinfo_2022C078.html]]></link>
            <description><![CDATA[サル痘の発生状況（複数国での発生）（その１２）]]></description>
            <category><![CDATA[広域情報]]></category>
            <pubDate>Fri, 9 Sep 2022 17:45:25 +0900</pubDate>
        </item>
        <item>
            <title><![CDATA[新型コロナウイルス感染症に関する新たな水際対策措置（水際対策強化に係る新たな措置(２８)に基づく国・地域の指定について）]]></title>
            <link><![CDATA[https://www.anzen.mofa.go.jp/info/pcwideareaspecificinfo_2022C077.html]]></link>
            <description><![CDATA[新型コロナウイルス感染症に関する新たな水際対策措置（水際対策強化に係る新たな措置(２８)に基づく国・地域の指定について）]]></description>