@@ -1,1 +1,1 @@
-{"xml":{"@version":1,"@encoding":"UTF-8","@standalone":"yes"},"rss":{"@version":2,"channel":{"title":"外務省海外安全ホームページ新着海外安全情報","link":"https://www.anzen.mofa.go.jp/index.html","description":"このホームページに掲載する海外安全情報は、海外に渡航・滞在される方々が自分自身で安全を確保していただくための参考情報です。法的な強制力をもって、皆様の渡航を帰ししたり、退避を命令したりするものではありません。同様に旅行会社の主催する旅行を中止させる効力もありません。渡航前、滞在中は、常に「自分の身は自分で守る」との心構えをもって、安全対策に努めてください。","lastBuildDate":"Tue, 13 Sep 2022 14:56:14 +0900","item":[{"title":"ネパールの危険情報【危険レベル継続】（内容の更新）","link":"https://www.anzen.mofa.go.jp/info/pchazardspecificinfo_2022T075.html","description":"【危険度】\r\n●極西部（カイラリ郡、バジャン郡、バジュラ郡、アチャム郡）、中西部（バケ郡、スルケット郡、ジュムラ郡、ダン郡、バルディア郡、ロルパ郡、ルクム（東部）郡、ルクム（西部）郡、サリヤン郡、ジャジャルコット郡、カリコット郡、ダイレク郡、ピュータン郡）、中部（パルサ郡、バラ郡、ラウタハト郡、サルラヒ郡、マハッタリ郡、ダヌシャ郡の各東西ハイウェイから南方地域）、東部（シラハ郡とサプタリ郡の各東西マヘンドラハイウェイから南方地域）\r\n：レベル２：不要不急の渡航は止めてください。（継続）\r\n\r\n●上記以外の地域（フムラ郡、ムグ郡、ムスタン郡、マナン郡、ラスワ郡、ソルクンブ郡のクンブ地区を除く）\r\n：レベル１：十分注意してください。（継続）\r\n\r\n【ポイント】\r\n●政治的主張に基づく過激派集団（マオイスト・チャンド派）や、タライ地区の独立を目指す反政府グループが多い地域では、注意が必要です。\r\n●バンダと称するゼネラルストライキが散発的に実施されており、各種交通機関の麻痺及びバンダに乗じた暴力行為に注意が必要です。","category":"危険情報","pubDate":"Tue, 13 Sep 2022 14:56:14 +0900"},{"title":"サル痘の発生状況（複数国での発生）（その１２）","link":"https://www.anzen.mofa.go.jp/info/pcwideareaspecificinfo_2022C078.html","description":"サル痘の発生状況（複数国での発生）（その１２）","category":"広域情報","pubDate":"Fri, 9 Sep 2022 17:45:25 +0900"},{"title":"新型コロナウイルス感染症に関する新たな水際対策措置（水際対策強化に係る新たな措置(２８)に基づく国・地域の指定について）","link":"https://www.anzen.mofa.go.jp/info/pcwideareaspecificinfo_2022C077.html","description":"新型コロナウイルス感染症に関する新たな水際対策措置（水際対策強化に係る新たな措置(２８)に基づく国・地域の指定について）","category":"広域情報","pubDate":"Fri, 2 Sep 2022 17:05:04 +0900"},{"title":"ケニア：イスラム過激派テロ組織によるケニアへの攻撃に係る声明に関する注意喚起","link":"https://www.anzen.mofa.go.jp/info/pcspotinfo_2022C076.html","description":"ケニア：イスラム過激派テロ組織によるケニアへの攻撃に係る声明に関する注意喚起","category":"スポット情報","pubDate":"Wed, 31 Aug 2022 19:54:49 +0900"},{"title":"イラク：サドル師政界引退表明に伴う抗議活動の激化","link":"https://www.anzen.mofa.go.jp/info/pcspotinfo_2022C075.html","description":"イラク：サドル師政界引退表明に伴う抗議活動の激化","category":"スポット情報","pubDate":"Wed, 31 Aug 2022 17:41:49 +0900"},{"title":"新型コロナウイルス感染症に関する新たな水際対策措置（出国前検査陰性証明保持の見直し）","link":"https://www.anzen.mofa.go.jp/info/pcwideareaspecificinfo_2022C073.html","description":"新型コロナウイルス感染症に関する新たな水際対策措置（出国前検査陰性証明保持の見直し）","category":"広域情報","pubDate":"Thu, 25 Aug 2022 12:00:05 +0900"},{"title":"コンゴ民主共和国北キブ州におけるエボラ出血熱の発生","link":"https://www.anzen.mofa.go.jp/info/pcspotinfo_2022C072.html","description":"コンゴ民主共和国北キブ州におけるエボラ出血熱の発生","category":"スポット情報","pubDate":"Wed, 24 Aug 2022 16:00:35 +0900"},{"title":"サウジアラビアの危険情報【危険レベル継続】（内容の更新）","link":"https://www.anzen.mofa.go.jp/info/pchazardspecificinfo_2022T074.html","description":"【危険度】\r\n●ジャーザーン州、アシール州、ナジュラーン州、東部州におけるイエメンとの各国境地帯\r\n　レベル３：渡航は止めてください。（渡航中止勧告）（継続）\r\n●イラクとの国境地帯\r\n　レベル２：不要不急の渡航は止めてください。（継続）\r\n●上記地域を除く全土\r\n　レベル１：十分注意してください。（継続）\r\n\r\n【ポイント】\r\n●サウジアラビアでは、2015年をピークにテロ事件の発生件数は減少傾向にありますが、同年以降も、イスラム過激派組織「イラク・レバントのイスラム国」（ISIL）による自爆テロ・銃撃テロ事件が発生しています。\r\n●2020年秋、フランスにおいて発生した預言者ムハンマドの風刺画問題をめぐる抗議とみられる外国人襲撃、爆発事案が発生したほか、2021年12月、自動車レース「ダカール・ラリー」に参加したフランス関係者の車両の爆発事案が発生しています。\r\n●ジャーザーン州、アシール州、ナジュラーン州及び東部州におけるイエメンとの各国境地帯では、イエメン政府を支援するサウジアラビアに対し、イエメン反政府勢力ホーシー派からのミサイルや無人機攻撃が発生していましたが、2022年４月以降、停戦合意が発効中で、サウジアラビア主導の有志連合軍とホーシー派との戦闘は一時的に止まっています。\r\n●また、サウジアラビア国内各地の軍事基地、国際空港及び石油施設等において、イエメンに活動拠点を置くホーシー派による無人機等を用いた攻撃があり、これらの施設に被害が生じています。","category":"危険情報","pubDate":"Mon, 22 Aug 2022 15:07:36 +0900"},{"title":"サウジアラビア：ジッダにおける自爆事件の発生に伴う注意喚起","link":"https://www.anzen.mofa.go.jp/info/pcspotinfo_2022C071.html","description":"サウジアラビア：ジッダにおける自爆事件の発生に伴う注意喚起","category":"スポット情報","pubDate":"Thu, 18 Aug 2022 12:22:02 +0900"},{"title":"ケニア：大統領選挙に伴う治安悪化に関する注意喚起","link":"https://www.anzen.mofa.go.jp/info/pcspotinfo_2022C070.html","description":"ケニア：大統領選挙に伴う治安悪化に関する注意喚起","category":"スポット情報","pubDate":"Tue, 16 Aug 2022 18:09:30 +0900"},{"title":"各国に対する新型コロナウイルスにかかる感染症危険情報の発出（レベルの引下げ及び維持）","link":"https://www.anzen.mofa.go.jp/info/pchazardspecificinfo_2022T073.html","description":"【危険情報レベル】\r\n（１）レベル２：「不要不急の渡航はやめてください。」（継続）\r\n（アジア・大洋州）\r\n北朝鮮、台湾、豪州、クック諸島、ニュージーランド、ミクロネシア\r\n（中南米）\r\nグアテマラ、セントクリストファー・ネービス、パラグアイ、バルバドス、ベリーズ、ボリビア、メキシコ\r\n（欧州）\r\nアルバニア、エストニア、カザフスタン、北マケドニア、クロアチア、コソボ、サンマリノ、ジョージア、スロバキア、スロベニア、セルビア、ハンガリー、モナコ、モンテネグロ、ルーマニア、ルクセンブルク\r\n（中東・アフリカ）\r\nイスラエル、トルコ、バーレーン、パレスチナ、レバノン、チュニジア\r\n\r\n（２）レベル１「十分注意してください。」（継続）\r\n（アジア・大洋州）\r\nインド、韓国、カンボジア、シンガポール、スリランカ、タイ、中国、ネパール、バングラデシュ、ブータン、ブルネイ、ベトナム、香港、マカオ、マレーシア、モルディブ、モンゴル、ラオス、サモア、トンガ、ナウル、ニウエ、パラオ、フィジー、マーシャル\r\n（北米）\r\n米国、カナダ\r\n（中南米）\r\nアルゼンチン、ウルグアイ、エクアドル、エルサルバドル、キューバ、コスタリカ、コロンビア、チリ、ニカラグア、パナマ、ブラジル、ペルー\r\n（欧州）\r\nアイスランド、アイルランド、アンドラ、イタリア、英国、オーストリア、オランダ、キプロス、ギリシャ、スイス、スウェーデン、スペイン、デンマーク、ドイツ、ノルウェー、フィンランド、フランス、ベラルーシ、ベルギー、マルタ、ラトビア、リトアニア、リヒテンシュタイン\r\n（中東・アフリカ）\r\nアラブ首長国連邦、イラン、カタール、クウェート、サウジアラビア、セーシェル、モザンビーク、モーリシャス\r\n\r\n（３）レベル２：「不要不急の渡航はやめてください。」（レベル引下げ）\r\n（中南米）\r\nジャマイカ、セントビンセント及びグレナディーン諸島、セントルシア、ハイチ\r\n（欧州）\r\nキルギス、ブルガリア、ボスニア・ヘルツェゴビナ、モルドバ\r\n（中東・アフリカ）\r\nアフガニスタン、イラク、アルジェリア、アンゴラ、エスワティニ、エチオピア、ガーナ、ガボン、カメルーン、ガンビア、ギニア、ギニアビサウ、ケニア、コートジボワール、コンゴ共和国、コンゴ民主共和国、ザンビア、シエラレオネ、ジブチ、ジンバブエ、スーダン、赤道ギニア、セネ","category":"感染症危険情報","pubDate":"Tue, 16 Aug 2022 10:47:00 +0900"},{"title":"各国に対する新型コロナウイルスにかかる感染症危険情報の発出（レベルの引下げ及び維持）","link":"https://www.anzen.mofa.go.jp/info/pchazardspecificinfo_2022T072.html","description":"【危険情報レベル】\r\n（１）レベル２：「不要不急の渡航はやめてください。」（継続）\r\n（アジア・大洋州）\r\n北朝鮮、台湾、豪州、クック諸島、ニュージーランド、ミクロネシア\r\n（中南米）\r\nグアテマラ、セントクリストファー・ネービス、パラグアイ、バルバドス、ベリーズ、ボリビア、メキシコ\r\n（欧州）\r\nアルバニア、エストニア、カザフスタン、北マケドニア、クロアチア、コソボ、サンマリノ、ジョージア、スロバキア、スロベニア、セルビア、ハンガリー、モナコ、モンテネグロ、ルーマニア、ルクセンブルク\r\n（中東・アフリカ）\r\nイスラエル、トルコ、バーレーン、パレスチナ、レバノン、チュニジア\r\n\r\n（２）レベル１「十分注意してください。」（継続）\r\n（アジア・大洋州）\r\nインド、韓国、カンボジア、シンガポール、スリランカ、タイ、中国、ネパール、バングラデシュ、ブータン、ブルネイ、ベトナム、香港、マカオ、マレーシア、モルディブ、モンゴル、ラオス、サモア、トンガ、ナウル、ニウエ、パラオ、フィジー、マーシャル\r\n（北米）\r\n米国、カナダ\r\n（中南米）\r\nアルゼンチン、ウルグアイ、エクアドル、エルサルバドル、キューバ、コスタリカ、コロンビア、チリ、ニカラグア、パナマ、ブラジル、ペルー\r\n（欧州）\r\nアイスランド、アイルランド、アンドラ、イタリア、英国、オーストリア、オランダ、キプロス、ギリシャ、スイス、スウェーデン、スペイン、デンマーク、ドイツ、ノルウェー、フィンランド、フランス、ベラルーシ、ベルギー、マルタ、ラトビア、リトアニア、リヒテンシュタイン\r\n（中東・アフリカ）\r\nアラブ首長国連邦、イラン、カタール、クウェート、サウジアラビア、セーシェル、モザンビーク、モーリシャス\r\n\r\n（３）レベル２：「不要不急の渡航はやめてください。」（レベル引下げ）\r\n（中南米）\r\nジャマイカ、セントビンセント及びグレナディーン諸島、セントルシア、ハイチ\r\n（欧州）\r\nキルギス、ブルガリア、ボスニア・ヘルツェゴビナ、モルドバ\r\n（中東・アフリカ）\r\nアフガニスタン、イラク、アルジェリア、アンゴラ、エスワティニ、エチオピア、ガーナ、ガボン、カメルーン、ガンビア、ギニア、ギニアビサウ、ケニア、コートジボワール、コンゴ共和国、コンゴ民主共和国、ザンビア、シエラレオネ、ジブチ、ジンバブエ、スーダン、赤道ギニア、セネ","category":"感染症危険情報","pubDate":"Tue, 16 Aug 2022 10:22:30 +0900"},{"title":"新型コロナウイルス感染症に関する新たな水際対策措置（日本出国前に日本で取得した検査証明書の扱いについて）","link":"https://www.anzen.mofa.go.jp/info/pcwideareaspecificinfo_2022C069.html","description":"新型コロナウイルス感染症に関する新たな水際対策措置（日本出国前に日本で取得した検査証明書の扱いについて）","category":"広域情報","pubDate":"Mon, 15 Aug 2022 14:16:53 +0900"}]}}}
+{"xml":{"@version":1,"@encoding":"UTF-8","@standalone":"yes"},"rss":{"@version":2,"channel":{"title":"外務省海外安全ホームページ新着海外安全情報","link":"https://www.anzen.mofa.go.jp/index.html","description":"このホームページに掲載する海外安全情報は、海外に渡航・滞在される方々が自分自身で安全を確保していただくための参考情報です。法的な強制力をもって、皆様の渡航を帰ししたり、退避を命令したりするものではありません。同様に旅行会社の主催する旅行を中止させる効力もありません。渡航前、滞在中は、常に「自分の身は自分で守る」との心構えをもって、安全対策に努めてください。","lastBuildDate":"Tue, 13 Sep 2022 18:39:23 +0900","item":[{"title":"新型コロナウイルス感染症に関する新たな水際対策措置（自宅等待機者の検査方法の見直し）","link":"https://www.anzen.mofa.go.jp/info/pcwideareaspecificinfo_2022C079.html","description":"新型コロナウイルス感染症に関する新たな水際対策措置（自宅等待機者の検査方法の見直し）","category":"広域情報","pubDate":"Tue, 13 Sep 2022 18:39:23 +0900"},{"title":"ネパールの危険情報【危険レベル継続】（内容の更新）","link":"https://www.anzen.mofa.go.jp/info/pchazardspecificinfo_2022T075.html","description":"【危険度】\r\n●極西部（カイラリ郡、バジャン郡、バジュラ郡、アチャム郡）、中西部（バケ郡、スルケット郡、ジュムラ郡、ダン郡、バルディア郡、ロルパ郡、ルクム（東部）郡、ルクム（西部）郡、サリヤン郡、ジャジャルコット郡、カリコット郡、ダイレク郡、ピュータン郡）、中部（パルサ郡、バラ郡、ラウタハト郡、サルラヒ郡、マハッタリ郡、ダヌシャ郡の各東西ハイウェイから南方地域）、東部（シラハ郡とサプタリ郡の各東西マヘンドラハイウェイから南方地域）\r\n：レベル２：不要不急の渡航は止めてください。（継続）\r\n\r\n●上記以外の地域（フムラ郡、ムグ郡、ムスタン郡、マナン郡、ラスワ郡、ソルクンブ郡のクンブ地区を除く）\r\n：レベル１：十分注意してください。（継続）\r\n\r\n【ポイント】\r\n●政治的主張に基づく過激派集団（マオイスト・チャンド派）や、タライ地区の独立を目指す反政府グループが多い地域では、注意が必要です。\r\n●バンダと称するゼネラルストライキが散発的に実施されており、各種交通機関の麻痺及びバンダに乗じた暴力行為に注意が必要です。","category":"危険情報","pubDate":"Tue, 13 Sep 2022 14:56:14 +0900"},{"title":"サル痘の発生状況（複数国での発生）（その１２）","link":"https://www.anzen.mofa.go.jp/info/pcwideareaspecificinfo_2022C078.html","description":"サル痘の発生状況（複数国での発生）（その１２）","category":"広域情報","pubDate":"Fri, 9 Sep 2022 17:45:25 +0900"},{"title":"新型コロナウイルス感染症に関する新たな水際対策措置（水際対策強化に係る新たな措置(２８)に基づく国・地域の指定について）","link":"https://www.anzen.mofa.go.jp/info/pcwideareaspecificinfo_2022C077.html","description":"新型コロナウイルス感染症に関する新たな水際対策措置（水際対策強化に係る新たな措置(２８)に基づく国・地域の指定について）","category":"広域情報","pubDate":"Fri, 2 Sep 2022 17:05:04 +0900"},{"title":"ケニア：イスラム過激派テロ組織によるケニアへの攻撃に係る声明に関する注意喚起","link":"https://www.anzen.mofa.go.jp/info/pcspotinfo_2022C076.html","description":"ケニア：イスラム過激派テロ組織によるケニアへの攻撃に係る声明に関する注意喚起","category":"スポット情報","pubDate":"Wed, 31 Aug 2022 19:54:49 +0900"},{"title":"イラク：サドル師政界引退表明に伴う抗議活動の激化","link":"https://www.anzen.mofa.go.jp/info/pcspotinfo_2022C075.html","description":"イラク：サドル師政界引退表明に伴う抗議活動の激化","category":"スポット情報","pubDate":"Wed, 31 Aug 2022 17:41:49 +0900"},{"title":"新型コロナウイルス感染症に関する新たな水際対策措置（出国前検査陰性証明保持の見直し）","link":"https://www.anzen.mofa.go.jp/info/pcwideareaspecificinfo_2022C073.html","description":"新型コロナウイルス感染症に関する新たな水際対策措置（出国前検査陰性証明保持の見直し）","category":"広域情報","pubDate":"Thu, 25 Aug 2022 12:00:05 +0900"},{"title":"コンゴ民主共和国北キブ州におけるエボラ出血熱の発生","link":"https://www.anzen.mofa.go.jp/info/pcspotinfo_2022C072.html","description":"コンゴ民主共和国北キブ州におけるエボラ出血熱の発生","category":"スポット情報","pubDate":"Wed, 24 Aug 2022 16:00:35 +0900"},{"title":"サウジアラビアの危険情報【危険レベル継続】（内容の更新）","link":"https://www.anzen.mofa.go.jp/info/pchazardspecificinfo_2022T074.html","description":"【危険度】\r\n●ジャーザーン州、アシール州、ナジュラーン州、東部州におけるイエメンとの各国境地帯\r\n　レベル３：渡航は止めてください。（渡航中止勧告）（継続）\r\n●イラクとの国境地帯\r\n　レベル２：不要不急の渡航は止めてください。（継続）\r\n●上記地域を除く全土\r\n　レベル１：十分注意してください。（継続）\r\n\r\n【ポイント】\r\n●サウジアラビアでは、2015年をピークにテロ事件の発生件数は減少傾向にありますが、同年以降も、イスラム過激派組織「イラク・レバントのイスラム国」（ISIL）による自爆テロ・銃撃テロ事件が発生しています。\r\n●2020年秋、フランスにおいて発生した預言者ムハンマドの風刺画問題をめぐる抗議とみられる外国人襲撃、爆発事案が発生したほか、2021年12月、自動車レース「ダカール・ラリー」に参加したフランス関係者の車両の爆発事案が発生しています。\r\n●ジャーザーン州、アシール州、ナジュラーン州及び東部州におけるイエメンとの各国境地帯では、イエメン政府を支援するサウジアラビアに対し、イエメン反政府勢力ホーシー派からのミサイルや無人機攻撃が発生していましたが、2022年４月以降、停戦合意が発効中で、サウジアラビア主導の有志連合軍とホーシー派との戦闘は一時的に止まっています。\r\n●また、サウジアラビア国内各地の軍事基地、国際空港及び石油施設等において、イエメンに活動拠点を置くホーシー派による無人機等を用いた攻撃があり、これらの施設に被害が生じています。","category":"危険情報","pubDate":"Mon, 22 Aug 2022 15:07:36 +0900"},{"title":"サウジアラビア：ジッダにおける自爆事件の発生に伴う注意喚起","link":"https://www.anzen.mofa.go.jp/info/pcspotinfo_2022C071.html","description":"サウジアラビア：ジッダにおける自爆事件の発生に伴う注意喚起","category":"スポット情報","pubDate":"Thu, 18 Aug 2022 12:22:02 +0900"},{"title":"ケニア：大統領選挙に伴う治安悪化に関する注意喚起","link":"https://www.anzen.mofa.go.jp/info/pcspotinfo_2022C070.html","description":"ケニア：大統領選挙に伴う治安悪化に関する注意喚起","category":"スポット情報","pubDate":"Tue, 16 Aug 2022 18:09:30 +0900"},{"title":"各国に対する新型コロナウイルスにかかる感染症危険情報の発出（レベルの引下げ及び維持）","link":"https://www.anzen.mofa.go.jp/info/pchazardspecificinfo_2022T073.html","description":"【危険情報レベル】\r\n（１）レベル２：「不要不急の渡航はやめてください。」（継続）\r\n（アジア・大洋州）\r\n北朝鮮、台湾、豪州、クック諸島、ニュージーランド、ミクロネシア\r\n（中南米）\r\nグアテマラ、セントクリストファー・ネービス、パラグアイ、バルバドス、ベリーズ、ボリビア、メキシコ\r\n（欧州）\r\nアルバニア、エストニア、カザフスタン、北マケドニア、クロアチア、コソボ、サンマリノ、ジョージア、スロバキア、スロベニア、セルビア、ハンガリー、モナコ、モンテネグロ、ルーマニア、ルクセンブルク\r\n（中東・アフリカ）\r\nイスラエル、トルコ、バーレーン、パレスチナ、レバノン、チュニジア\r\n\r\n（２）レベル１「十分注意してください。」（継続）\r\n（アジア・大洋州）\r\nインド、韓国、カンボジア、シンガポール、スリランカ、タイ、中国、ネパール、バングラデシュ、ブータン、ブルネイ、ベトナム、香港、マカオ、マレーシア、モルディブ、モンゴル、ラオス、サモア、トンガ、ナウル、ニウエ、パラオ、フィジー、マーシャル\r\n（北米）\r\n米国、カナダ\r\n（中南米）\r\nアルゼンチン、ウルグアイ、エクアドル、エルサルバドル、キューバ、コスタリカ、コロンビア、チリ、ニカラグア、パナマ、ブラジル、ペルー\r\n（欧州）\r\nアイスランド、アイルランド、アンドラ、イタリア、英国、オーストリア、オランダ、キプロス、ギリシャ、スイス、スウェーデン、スペイン、デンマーク、ドイツ、ノルウェー、フィンランド、フランス、ベラルーシ、ベルギー、マルタ、ラトビア、リトアニア、リヒテンシュタイン\r\n（中東・アフリカ）\r\nアラブ首長国連邦、イラン、カタール、クウェート、サウジアラビア、セーシェル、モザンビーク、モーリシャス\r\n\r\n（３）レベル２：「不要不急の渡航はやめてください。」（レベル引下げ）\r\n（中南米）\r\nジャマイカ、セントビンセント及びグレナディーン諸島、セントルシア、ハイチ\r\n（欧州）\r\nキルギス、ブルガリア、ボスニア・ヘルツェゴビナ、モルドバ\r\n（中東・アフリカ）\r\nアフガニスタン、イラク、アルジェリア、アンゴラ、エスワティニ、エチオピア、ガーナ、ガボン、カメルーン、ガンビア、ギニア、ギニアビサウ、ケニア、コートジボワール、コンゴ共和国、コンゴ民主共和国、ザンビア、シエラレオネ、ジブチ、ジンバブエ、スーダン、赤道ギニア、セネ","category":"感染症危険情報","pubDate":"Tue, 16 Aug 2022 10:47:00 +0900"},{"title":"各国に対する新型コロナウイルスにかかる感染症危険情報の発出（レベルの引下げ及び維持）","link":"https://www.anzen.mofa.go.jp/info/pchazardspecificinfo_2022T072.html","description":"【危険情報レベル】\r\n（１）レベル２：「不要不急の渡航はやめてください。」（継続）\r\n（アジア・大洋州）\r\n北朝鮮、台湾、豪州、クック諸島、ニュージーランド、ミクロネシア\r\n（中南米）\r\nグアテマラ、セントクリストファー・ネービス、パラグアイ、バルバドス、ベリーズ、ボリビア、メキシコ\r\n（欧州）\r\nアルバニア、エストニア、カザフスタン、北マケドニア、クロアチア、コソボ、サンマリノ、ジョージア、スロバキア、スロベニア、セルビア、ハンガリー、モナコ、モンテネグロ、ルーマニア、ルクセンブルク\r\n（中東・アフリカ）\r\nイスラエル、トルコ、バーレーン、パレスチナ、レバノン、チュニジア\r\n\r\n（２）レベル１「十分注意してください。」（継続）\r\n（アジア・大洋州）\r\nインド、韓国、カンボジア、シンガポール、スリランカ、タイ、中国、ネパール、バングラデシュ、ブータン、ブルネイ、ベトナム、香港、マカオ、マレーシア、モルディブ、モンゴル、ラオス、サモア、トンガ、ナウル、ニウエ、パラオ、フィジー、マーシャル\r\n（北米）\r\n米国、カナダ\r\n（中南米）\r\nアルゼンチン、ウルグアイ、エクアドル、エルサルバドル、キューバ、コスタリカ、コロンビア、チリ、ニカラグア、パナマ、ブラジル、ペルー\r\n（欧州）\r\nアイスランド、アイルランド、アンドラ、イタリア、英国、オーストリア、オランダ、キプロス、ギリシャ、スイス、スウェーデン、スペイン、デンマーク、ドイツ、ノルウェー、フィンランド、フランス、ベラルーシ、ベルギー、マルタ、ラトビア、リトアニア、リヒテンシュタイン\r\n（中東・アフリカ）\r\nアラブ首長国連邦、イラン、カタール、クウェート、サウジアラビア、セーシェル、モザンビーク、モーリシャス\r\n\r\n（３）レベル２：「不要不急の渡航はやめてください。」（レベル引下げ）\r\n（中南米）\r\nジャマイカ、セントビンセント及びグレナディーン諸島、セントルシア、ハイチ\r\n（欧州）\r\nキルギス、ブルガリア、ボスニア・ヘルツェゴビナ、モルドバ\r\n（中東・アフリカ）\r\nアフガニスタン、イラク、アルジェリア、アンゴラ、エスワティニ、エチオピア、ガーナ、ガボン、カメルーン、ガンビア、ギニア、ギニアビサウ、ケニア、コートジボワール、コンゴ共和国、コンゴ民主共和国、ザンビア、シエラレオネ、ジブチ、ジンバブエ、スーダン、赤道ギニア、セネ","category":"感染症危険情報","pubDate":"Tue, 16 Aug 2022 10:22:30 +0900"},{"title":"新型コロナウイルス感染症に関する新たな水際対策措置（日本出国前に日本で取得した検査証明書の扱いについて）","link":"https://www.anzen.mofa.go.jp/info/pcwideareaspecificinfo_2022C069.html","description":"新型コロナウイルス感染症に関する新たな水際対策措置（日本出国前に日本で取得した検査証明書の扱いについて）","category":"広域情報","pubDate":"Mon, 15 Aug 2022 14:16:53 +0900"}]}}}
